--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
