--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Ignore environment variables
+.env
+frontend/.env
+backend/.env
+
+# Ignore sensitive data
+rzp.csv
+
 # dependencies
 /node_modules
 /.pnp
@@ -21,3 +29,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules
