--- a/.gitattributes
+++ b/.gitattributes
@@ -1,21 +1,14 @@
-# React (in .js files)
+# Ensure accurate language stats on GitHub
 *.js linguist-language=JavaScript
-
-# CSS and HTML
-*.css linguist-language=CSS
-*.html linguist-language=HTML
-
-# JSON files (package.json, config, etc.)
+*.jsx linguist-language=JavaScript
 *.json linguist-language=JSON
-
-# Environment/config files (ignored from language stats)
+*.html linguist-language=HTML
+*.css linguist-language=CSS
 *.env linguist-generated=true
-*.env.* linguist-generated=true
-*.lock linguist-generated=true
-*.log linguist-generated=true
+package-lock.json linguist-generated=true
+yarn.lock linguist-generated=true
 
-# Ignore generated/static files (from builds)
-public/** linguist-generated=true
-build/** linguist-generated=true
-dist/** linguist-generated=true
-node_modules/** linguist-generated=true
+# Ignore vendored (not user-written) files from stats
+node_modules/** linguist-vendored
+build/** linguist-vendored
+dist/** linguist-vendored
